glTFViewer test pass (rename to CoronaEditor)

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -106,6 +106,7 @@ endfunction()
 
 if(TARGET Diligent-NativeAppBase AND TARGET Diligent-TextureLoader AND TARGET Diligent-Imgui)
     add_subdirectory(EngineBase)
+    add_subdirectory(CoronaEditor)
 endif()
 
 # Create a custom target to run source code formatting validation command
