Change the engine hierarchy.

--- a/Engine/AnimationTest/CMakeLists.txt
+++ b/Engine/AnimationTest/CMakeLists.txt
@@ -3,17 +3,41 @@ cmake_minimum_required (VERSION 3.6)
 project(AnimationTest CXX)
 
 set(SOURCE
-    src/ImguiDemo.cpp
-    ${DILIGENT_DEAR_IMGUI_PATH}/imgui_demo.cpp
+    src/GLTFViewer.cpp
 )
 
 set(INCLUDE
-    src/ImguiDemo.hpp
+    src/GLTFViewer.hpp
 )
 
-file(GLOB CESIUM_MAN_MODEL LIST_DIRECTORIES false assets/models/CesiumMan/*.*)
+set(SHADERS
+    assets/shaders/BoundBox.vsh
+    assets/shaders/BoundBox.psh
+    assets/shaders/env_map.vsh
+    assets/shaders/env_map.psh
+    assets/shaders/default.vsh
+    assets/shaders/default.psh
+)
 
-set(MODELS ${CESIUM_MAN_MODEL})
+set(EXTERNAL_SHADERS
+    ../../DiligentFX/Shaders/PostProcess/ToneMapping/public/ToneMappingStructures.fxh
+    ../../DiligentFX/Shaders/PostProcess/ToneMapping/public/ToneMapping.fxh
+    ../../DiligentFX/Shaders/Common/public/BasicStructures.fxh
+    ../../DiligentFX/Shaders/Common/public/ShaderUtilities.fxh
+)
+
+set(ALL_SHADERS ${SHADERS} ${EXTERNAL_SHADERS})
+
+file(GLOB BOOM_BOX_MODEL LIST_DIRECTORIES false assets/models/BoomBoxWithAxes/*.*)
+file(GLOB CESIUM_MAN_MODEL LIST_DIRECTORIES false assets/models/CesiumMan/*.*)
+file(GLOB DAMAGED_HELMENT_MODEL LIST_DIRECTORIES false assets/models/DamagedHelmet/*.*)
+file(GLOB FLIGHT_HELMENT_MODEL LIST_DIRECTORIES false assets/models/FlightHelmet/*.*)
+file(GLOB METAL_ROUGH_SPHERES_MODEL LIST_DIRECTORIES false assets/models/MetalRoughSpheres/*.*)
+file(GLOB NORMAL_TANGENT_TEST_MODEL LIST_DIRECTORIES false assets/models/NormalTangentTest/*.*)
+file(GLOB FOX_MODEL LIST_DIRECTORIES false assets/models/Fox/*.*)
+
+set(MODELS ${BOOM_BOX_MODEL} ${CESIUM_MAN_MODEL} ${DAMAGED_HELMENT_MODEL}
+           ${FLIGHT_HELMENT_MODEL} ${METAL_ROUGH_SPHERES_MODEL} ${NORMAL_TANGENT_TEST_MODEL} ${FOX_MODEL})
 set(TEXTURES assets/textures/papermill.ktx)
 
 set(RENDER_STATES assets/render_states/RenderStates.json)
@@ -30,6 +54,10 @@ PRIVATE
     Diligent-AssetLoader 
     Diligent-RenderStateNotation 
     DiligentFX
+)
+
+target_include_directories(AnimationTest PRIVATE
+    ../../DiligentFX/Shaders/PostProcess/ToneMapping/public/
 )
 
 foreach(FILE ${EXTERNAL_SHADERS})
@@ -54,9 +82,39 @@ set_source_files_properties(${TEXTURES} PROPERTIES
     MACOSX_PACKAGE_LOCATION "Resources/textures"
 )
 
+set_source_files_properties(${BOOM_BOX_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/BoomBoxWithAxes"
+    MACOSX_PACKAGE_LOCATION "Resources/models/BoomBoxWithAxes"
+)
+
 set_source_files_properties(${CESIUM_MAN_MODEL} PROPERTIES
     VS_DEPLOYMENT_LOCATION "models/CesiumMan"
     MACOSX_PACKAGE_LOCATION "Resources/models/CesiumMan"
+)
+
+set_source_files_properties(${DAMAGED_HELMENT_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/DamagedHelmet"
+    MACOSX_PACKAGE_LOCATION "Resources/models/DamagedHelmet"
+)
+
+set_source_files_properties(${FLIGHT_HELMENT_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/FlightHelmet"
+    MACOSX_PACKAGE_LOCATION "Resources/models/FlightHelmet"
+)
+
+set_source_files_properties(${METAL_ROUGH_SPHERES_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/MetalRoughSpheres"
+    MACOSX_PACKAGE_LOCATION "Resources/models/MetalRoughSpheres"
+)
+
+set_source_files_properties(${NORMAL_TANGENT_TEST_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/NormalTangentTest"
+    MACOSX_PACKAGE_LOCATION "Resources/models/NormalTangentTest"
+)
+
+set_source_files_properties(${FOX_MODEL} PROPERTIES
+    VS_DEPLOYMENT_LOCATION "models/Fox"
+    MACOSX_PACKAGE_LOCATION "Resources/models/Fox"
 )
 
 # We have to use a different group name (Assets with capital A) to override grouping that was set by add_sample_app
