Set up global context.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,13 +52,7 @@ if(${CORONA_BUILD_ENGINE})
     add_subdirectory(Engine)
 endif()
 
-if(TARGET GLTFViewer)
-    set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT GLTFViewer)
-elseif(TARGET Asteroids)
-    set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT Asteroids)
-elseif(TARGET Atmosphere)
-    set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT Atmosphere)
-endif()
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT CoronaEditor)
 
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/DiligentCommunity")
     add_subdirectory(DiligentCommunity)
