--- a/Engine/CoronaEditor/CMakeLists.txt
+++ b/Engine/CoronaEditor/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.6)
 
-project(CoronaEditor CXX)
+project(CoronaEditor)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
