--- a/Engine/EngineCore/CMakeLists.txt
+++ b/Engine/EngineCore/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required (VERSION 3.6)
 
 project(EngineCore)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF) 
 # ---- Add source files ----
 
 # Note: globbing sources is considered bad practice as CMake's generators may not detect new files
@@ -57,5 +53,6 @@ PUBLIC
 )
 
 set_target_properties(EngineCore PROPERTIES
+    CXX_STANDARD 17
     FOLDER Engine
 )
