--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 cmake_minimum_required(VERSION 3.6)
+set(CMAKE_C_COMPILER "clang-cl")
+set(CMAKE_C_FLAGS_DEBUG "/Debug")
+set(CMAKE_C_FLAGS_MINSIZEREL "-Os -DNDEBUG")
+set(CMAKE_C_FLAGS_RELEASE "-O4 -DNDEBUG")
+
 set(CMAKE_C_STANDARD 11)
+
+set (CMAKE_CXX_COMPILER             "clang-cl")
+set (CMAKE_CXX_FLAGS_DEBUG          "/Debug")
+set (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
+set (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
+set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 /Debug")
+
 set(CMAKE_CXX_STANDARD 17)
 
 project(CoronaEngine)
