--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 
 add_subdirectory(Framework)
-add_subdirectory(Empty)
+add_subdirectory(Platform/Windows)
