--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(Corona-Windows WindowsApplication.cpp)
-target_link_libraries(Corona-Windows Common)
+add_executable(MyGameEngineD3d12 WindowsApplication.cpp D3d12Application.cpp)
+target_link_libraries(MyGameEngineD3d12 Common D3dRHI d3d12 dxgi d3dcompiler)
