--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,17 @@ include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
 
 IF(${UNIX})
-    include_directories("${PROJECT_SOURCE_DIR}/Platform/Linux")
+    set(MYGE_TARGET_PLATFORM "Linux")
 ELSEIF(${WIN32})
     add_definitions(/D _CRT_SECURE_NO_WARNINGS)
-    include_directories("${PROJECT_SOURCE_DIR}/Platform/Windows")
+    set(MYGE_TARGET_PLATFORM "Windows")
 ENDIF(${UNIX})
+include_directories("${PROJECT_SOURCE_DIR}/Platform/${MYGE_TARGET_PLATFORM}")
+set(MYGE_EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${MYGE_TARGET_PLATFORM}/)
+
+set(MYGE_EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${MYGE_TARGET_PLATFORM}/)
+include_directories("${MYGE_EXTERNAL_ROOT}include")
+set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}lib/)
 
 # include(CTest)
 add_subdirectory(Framework)
