--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "External/ispc"]
+[submodule "External/src/ispc"]
 	path = External/src/ispc
 	url = https://github.com/ispc/ispc.git
-[submodule "External/crossguid"]
+[submodule "External/src/crossguid"]
 	path = External/src/crossguid
 	url = https://github.com/graeme-hill/crossguid.git
