30_Add OGEX file parser

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "External/src/crossguid"]
 	path = External/src/crossguid
 	url = https://github.com/graeme-hill/crossguid.git
+[submodule "External/src/OpenGEX"]
+	path = External/src/OpenGEX
+	url = https://github.com/netwarm007/OpenGEX.git
