--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -13,9 +13,15 @@ target_link_libraries(OgexParserTest Common)
 # __add_xg_platform_dependencies(OgexParserTest)
 
 target_link_libraries(OgexParserTest 
-            debug  ${XG_LIBRARY_DEBUG} ${OPENGEX_LIBRARY_DEBUG} ${OPENDDL_LIBRARY_DEBUG})
+            debug  ${XG_LIBRARY_DEBUG} 
+            debug  ${OPENGEX_LIBRARY_DEBUG} 
+            debug  ${OPENDDL_LIBRARY_DEBUG}
+            )
 target_link_libraries(OgexParserTest 
-            optimized  ${XG_LIBRARY_RELEASE} ${OPENGEX_LIBRARY_RELEASE} ${OPENDDL_LIBRARY_RELEASE})
+            optimized  ${XG_LIBRARY_RELEASE} 
+            optimized  ${OPENGEX_LIBRARY_RELEASE} 
+            optimized  ${OPENDDL_LIBRARY_RELEASE}
+            )
 
 add_executable(SceneObjectTest SceneObjectTest.cpp)
 target_link_libraries(SceneObjectTest Common)
