--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "External/src/OpenGEX"]
 	path = External/src/OpenGEX
 	url = https://github.com/Shepherd-Liu/OpenGEX.git
+[submodule "External/src/crossguid"]
+	path = External/src/crossguid
+	url = https://github.com/Shepherd-Liu/crossguid.git
