--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -37,8 +37,8 @@ set(CORONA_LIBRARIES_LIST crossguid OpenDDL OpenGEX)
 
 MESSAGE( STATUS "CORONA_EXLIBRARY: " ${CORONA_EXLIBRARY} )
 
-find_library(XG_LIBRARY_DEBUG           crossguid-dgb PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Debug)
-find_library(XG_LIBRARY_RELEASE         crossguid PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Release)
+find_library(XG_LIBRARY_DEBUG           xg PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Debug)
+find_library(XG_LIBRARY_RELEASE         xg PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Release)
 
 find_library(OPENDDL_LIBRARY_DEBUG      OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Debug)
 find_library(OPENDDL_LIBRARY_RELEASE    OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Release)
