Update gltf parser and be able to get index buffer (vertex not yet)

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -38,3 +38,14 @@ target_link_libraries(tinygltfTest
             debug ${TINYGLTF_LIBRARY_DEBUG})
 target_link_libraries(tinygltfTest 
             optimized ${TINYGLTF_LIBRARY_RELEASE})
+
+add_executable(mygltfTest mygltfTest.cpp)
+target_link_libraries(mygltfTest Common)
+target_link_libraries(mygltfTest 
+            debug  ${XG_LIBRARY_DEBUG} 
+            debug  ${TINYGLTF_LIBRARY_DEBUG}
+            )
+target_link_libraries(mygltfTest 
+            optimized  ${XG_LIBRARY_RELEASE} 
+            optimized  ${TINYGLTF_LIBRARY_RELEASE}
+            )
