--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -21,3 +21,14 @@ target_link_libraries(mygltfTest
             optimized  ${XG_LIBRARY_RELEASE} 
             optimized  ${TINYGLTF_LIBRARY_RELEASE}
             )
+
+add_executable(gltfSceneManagerTest gltfSceneManagerTest.cpp)
+target_link_libraries(gltfSceneManagerTest Common)
+target_link_libraries(gltfSceneManagerTest 
+            debug  ${XG_LIBRARY_DEBUG} 
+            debug  ${TINYGLTF_LIBRARY_DEBUG}
+            )
+target_link_libraries(gltfSceneManagerTest 
+            optimized  ${XG_LIBRARY_RELEASE} 
+            optimized  ${TINYGLTF_LIBRARY_RELEASE}
+            )
