Add hlsl compile configuration

--- a/Framework/GeomMath/ispc/CMakeLists.txt
+++ b/Framework/GeomMath/ispc/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(FUNCTIONS CrossProduct DotProduct MulByElement Transpose Normalize
-              Transform AddByElement SubByElement
+              Transform AddByElement SubByElement InverseMatrix4X4f
         )
 
 foreach(FUNC IN LISTS FUNCTIONS)
