--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,5 @@ set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}/lib)
 add_subdirectory(Framework)
 add_subdirectory(Platform)
 add_subdirectory(RHI)
+add_subdirectory(Asset)
 add_subdirectory(Test)
