--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_library(WindowsApplication WindowsApplication.cpp)
 
-add_executable(CoronaEngineD3d12 D3d12Application.cpp)
+add_executable(CoronaEngineD3d12 
+    D3d12Application.cpp
+    D3d12ApplicationConfig.cpp
+)
 target_link_libraries(CoronaEngineD3d12 WindowsApplication Common D3dRHI d3d12 dxgi d3dcompiler)
 target_link_libraries(CoronaEngineD3d12 
             debug  ${XG_LIBRARY_DEBUG} 
