--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "External/src/tinygltf"]
 	path = External/src/tinygltf
 	url = https://github.com/S-LiuXiaolong/tinygltf.git
+[submodule "External/src/zlib"]
+	path = External/src/zlib
+	url = https://github.com/S-LiuXiaolong/zlib.git
