add JPEG and PNG support

--- a/Framework/Common/CMakeLists.txt
+++ b/Framework/Common/CMakeLists.txt
@@ -50,6 +50,9 @@ find_library(OPENGEX_LIBRARY_RELEASE    OpenGEX PATHS ${MYGE_EXTERNAL_LIBRARY_PA
 
 find_library(TINYGLTF_LIBRARY_DEBUG      tinyglTF PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Debug)
 find_library(TINYGLTF_LIBRARY_RELEASE    tinyglTF PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Release)
+
+find_library(ZLIB_LIBRARY_DEBUG      zlibstaticd PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Debug)
+find_library(ZLIB_LIBRARY_RELEASE    zlibstatic PATHS ${MYGE_EXTERNAL_LIBRARY_PATH}/Release)
 # target_link_libraries(Common ${XG_LIBRARY} ${OPENDDL_LIBRARY} ${OPENGEX_LIBRARY})
 
 if(WIN32)
