--- a/Platform/Windows/CMakeLists.txt
+++ b/Platform/Windows/CMakeLists.txt
@@ -11,10 +11,12 @@ target_link_libraries(CoronaEngineD3d12 WindowsApplication Common D3dRHI d3d12 d
 target_link_libraries(CoronaEngineD3d12 
             debug  ${XG_LIBRARY_DEBUG} 
             debug  ${TINYGLTF_LIBRARY_DEBUG}
+            debug  ${ZLIB_LIBRARY_DEBUG}
             )
 target_link_libraries(CoronaEngineD3d12 
             optimized  ${XG_LIBRARY_RELEASE} 
             optimized  ${TINYGLTF_LIBRARY_RELEASE}
+            optimized  ${ZLIB_LIBRARY_RELEASE}
             )
 
 add_subdirectory(test)
