Add JPEG and PNG support (but problem in JPEG)

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,5 +1,13 @@
 add_executable(AssetLoaderTest AssetLoaderTest.cpp)
 target_link_libraries(AssetLoaderTest Common)
+target_link_libraries(AssetLoaderTest 
+            debug  ${XG_LIBRARY_DEBUG} 
+            debug  ${TINYGLTF_LIBRARY_DEBUG}
+            )
+target_link_libraries(AssetLoaderTest 
+            optimized  ${XG_LIBRARY_RELEASE} 
+            optimized  ${TINYGLTF_LIBRARY_RELEASE}
+            )
 
 add_executable(GeomMathTest GeomMathTest.cpp)
 target_link_libraries(GeomMathTest GeomMath)
